Changes to login page alignment and list view fixes to rows and other changes.

--- a/themes/VTPL/css/style.css
+++ b/themes/VTPL/css/style.css
@@ -807,7 +807,7 @@ table.edit.view {
 }
 .list tr.pagination td table td
 {
-    padding: 4px 0px 4px 4px !important;
+    padding: 4px 0px 4px 0px !important;
 }
 .list tr.pagination td table td button
 {
@@ -3467,9 +3467,11 @@ input, select, textarea, button
 }
 
 /* for list views */
-.oddListRowS1 td a, .evenListRowS1 td a
+.oddListRowS1 td a, .evenListRowS1 td a 
 {
-    font-size: 12px;
+    color: #006BB9;
+    font-size: 13px;
+    text-decoration: none;
 }
 
 /* misc links */
@@ -3835,22 +3837,26 @@ ul.subpanelTablist li a.activeSubTab:hover
 .list tr td[scope=col] a:visited,
 .list tr.pagination td table td span.pageNumbers
 {
-    color: #444444;
+    color: #666666;
 }
 .list
 {
     border-color: #ABC3D7 !important;
 }
-.evenListRowS1 td, 
-.oddListRowS1 td
+.evenListRowS1 td, .oddListRowS1 td
 {
-    color: #000000;
-    border-bottom: 1px solid #cbdae6;
+    color: #222;
+    border-bottom: 1px solid #ddd;
+    background-color: #fff;
 }
-.evenListRowS1:hover td, 
-.oddListRowS1:hover td
+
+.evenListRowS1 td{
+    background-color: #f6f6f6;
+}
+
+.evenListRowS1:hover td, .oddListRowS1:hover td
 {
-    background: #f6f6f6;
+    background: #ecf7ff;
 }
 
 /* detailviews */
